[package]
authors = ["Rouven Reuter", "Peter Robinson", "Patrick Simon Nairne"]
description = "A configurable ETL pipeline to convert tables into phenpackets"
edition = "2024"
homepage = "https://robinsongroup.github.io/"
license = "MIT"
name = "phenoxtract"
version = "0.1.0"

[dependencies]
config = "0.15.17"
polars = { version = "0.51.0", features = ["lazy"] }
serde = "1.0.228"
anyhow = "1.0.100"
phenopackets = { version = "0.2.2-post1", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
calamine = { version = "0.31.0", features = ["dates"] }
regex = "1.11.3"
log = "0.4.27"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
either = "1.15.0"
chrono = "0.4.41"
ontolius = "0.5.5"
serde_json = "1.0.145"
prost-types = "0.13.5"

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.23.0"
rust_xlsxwriter = "0.90.2"
mockito = "1.7.0"