[package]
authors = ["Rouven Reuter", "Peter Robinson", "Patrick Simon Nairne"]
description = "A configurable ETL pipeline to convert tables into phenpackets"
edition = "2024"
homepage = "https://robinsongroup.github.io/"
license = "MIT"
name = "phenoxtract"
version = "0.1.0"

[dependencies]
config = "0.15.18"
polars = { version = "0.51.0", features = ["lazy"] }
serde = "1.0.228"
anyhow = "1.0.100"
phenopackets = { version = "0.2.2-post1", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
calamine = { version = "0.31.0", features = ["dates"] }
regex = "1.12.2"
log = "0.4.28"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
either = "1.15.0"
chrono = "0.4.41"
ontolius = "0.6.0"
serde_json = "1.0.145"
prost-types = "0.14.1" # Do not update. Version depends on Phenopackets crate.
directories = "6.0.0"
ordermap = "1.0.0"
ratelimit = "0.10.0"
redb = "3.1.0"
thiserror = "2.0.17"
ga4ghphetools = { git = 'https://github.com/P2GX/ga4ghphetools.git', tag = '0.4.134' }

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.23.0"
rust_xlsxwriter = "0.90.2"
mockito = "1.7.0"
once_cell = "1.21.3"
serial_test = "3.2.0"
pretty_assertions = "1.4.1"