[package]
authors = ["Rouven Reuter", "Peter Robinson", "Patrick Simon Nairne", "Varenya Jain"]
description = "A configurable ETL pipeline to convert tables into phenpackets"
edition = "2024"
homepage = "https://robinsongroup.github.io/"
license = "MIT"
name = "phenoxtract"
version = "0.1.0"

[dependencies]
config = "0.15.19"
polars = { version = "0.51.0", features = ["lazy"] }
serde = "1.0.228"
anyhow = "1.0.100"
phenopackets = { version = "0.2.2-post2", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
calamine = { version = "0.32.0", features = ["dates"] }
regex = "1.12.2"
log = "0.4.28"
reqwest = { version = "0.13.1", features = ["blocking", "json", "query"] }
either = "1.15.0"
chrono = "0.4.41"
ontolius = "0.7.2"
serde_json = "1.0.145"
prost-types = "0.14.1" # Version depends on Phenopackets crate. uses >= 14.0 as of https://github.com/P2GX/phenopackets-rust/commit/f17dad1be0c5eed099d9696bd2c8e0a6dd2d97fc
ordermap = "1.0.0"
redb = "3.1.0"
thiserror = "2.0.17"
date-differencer = "0.1.3"
iso8601-duration = "0.2.0"
strum = "0.27.2"
strum_macros = "0.27.2"
enum-try-as-inner = "0.1.1"
pivot = { git = "https://github.com/psnairne/PIVOT", tag = "v0.1.3" }
ontology-registry = "0.2.0"
directories = "6.0.0"
shellexpand = "3.1.1"
num-traits = "0.2.19"
urlencoding = "2.1.3"

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.23.0"
rust_xlsxwriter = "0.90.2"
mockito = "1.7.0"
once_cell = "1.21.3"
serial_test = "3.2.0"
pretty_assertions = "1.4.1"
dotenvy = "0.15"
