[package]
authors = ["Rouven Reuter", "Peter Robinson", "Patrick Simon Nairne", "Varenya Jain", "Adam Graefe"]
description = "This crate contains integration tests for PhenoXtract."
edition = "2024"
homepage = "https://robinsongroup.github.io/"
license = "MIT"
name = "integration_tests"
version = "0.1.0"

[dependencies]
phenoxtract = { path = "../phenoxtract" }
phenopackets = "0.2.2-post2"
directories = "6.0.0"
dotenvy = "0.15.7"
ontology-registry = "0.3.7"
pivot = { git = "https://github.com/psnairne/PIVOT", tag = "v0.1.5" }
rstest = "0.26.1"
tempfile = "3.24.0"
serde_json = "1.0.145"
pretty_assertions = "1.4.1"