[package]
authors = ["Rouven Reuter", "Peter Robinson", "Patrick Simon Nairne", "Varenya Jain"]
description = "Test Suite"
edition = "2024"
homepage = "https://robinsongroup.github.io/"
license = "MIT"
name = "test_suite"
version = "0.1.0"

[dependencies]
phenoxtract = {path = "../phenoxtract"}
phenopackets = "0.2.2-post2"
dotenvy = "0.15.7"
ontology-registry = "0.2.0"
rstest = "0.26.1"
tempfile = "3.24.0"
serde_json = "1.0.149"
pretty_assertions = "1.4.1"
directories = "6.0.0"
pivot = { git = "https://github.com/psnairne/PIVOT", tag = "v0.1.3" }
